fixed images. added a quote to top. need to align about me better and format for mibile in media quieries.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,17 @@ header h2 {
     background-color: rgb(94, 94, 94);
 }
 
+.Quotebar{
+    width: 100%;
+    height: 150px;
+    background-color: rgb(0, 0, 0);
+    
+}
+
+#purpose {
+    color: aquamarine;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -40,7 +51,7 @@ nav {
 
 nav ul li {
     list-style-type: none;
-    display: inline-block;
+    display: inline;
 
 }
 
@@ -73,29 +84,50 @@ nav ul li {
 }
 
 .section-tag1 h2 {
-    padding: 5px;
+   /* padding: 5px;
     padding-bottom: 15px;
+*/
+    position: absolute;
+      
+    z-index: 1;
+}
+
+.section-tag1 img {
+    position: relative;
+    height: 350px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.section-tag1 p{
+float: right;
+
 }
 
 
-
-
-
+footer nav{
+    display: inline;
+    align-items: center;
+        margin:auto 0 ;
+}
 
 footer nav ul  {
     list-style-type: none;
+    margin:auto 0 ;
 }
 
 
 footer nav ul  {
     display: inline-block;
-     margin-left: 25px;
+    margin:auto 0 ;
 }
 
 
 
 
-
+footer {
+    text-align: center;
+}
 
 
 
@@ -120,19 +152,20 @@ p {
 
 footer {
     padding: 30px;
-    clear: both;
+
 
 }
 
 .footer-bar {
     word-spacing: 40px;
+    margin:auto 0 ;
   
    
 }
 
 footer nav{
     padding-top: 15px;
-
+    margin:auto 0 ;
     font-size: 20px;
 
     
@@ -168,12 +201,18 @@ footer nav a {
     display: inline-block;
     align-items: center;
     justify-content: left;
-    margin: 50px;
+   /* margin: 50px;*/
     border-right: 4px solid black;
     flex: 0 0 20%;padding-right: 45px;
 }
 
 
+
+.Surf-Report:hover{
+    color: rgba(255,255,255,1);
+    box-shadow: 0 5px 15px rgb(192, 51, 51);
+
+}
 
 .Surf-Report {
     width: 1075px;
@@ -182,8 +221,6 @@ footer nav a {
     border-radius: 10px;
     margin-left: auto;
     margin-right: 50px;
-
-
 }
 .Surf-Report h2{
     position: absolute;
@@ -198,76 +235,132 @@ footer nav a {
 
 }
 
+.LED-wall:hover{
+    color: rgba(255,255,255,1);
+    box-shadow: 0 5px 15px rgb(192, 51, 51);
+
+}
 .LED-wall {
     width: 500px;
     height: 300px;
     background-color: white;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
-    margin: 50px;
-    margin-left: auto;
 
+
+
+}
+.LED-wall h2{
+    position: absolute;
+    z-index: 1;
+}
+.LED-wall img{
+    position: relative;
+    height: 301px;
+   width: 100%;
+   border-radius: 10px;
 
 }
 
 
+.Calculator:hover{
+    color: rgba(255,255,255,1);
+    box-shadow: 0 5px 15px rgb(192, 51, 51);
+
+}
 .Calculator {
     width: 500px;
     height: 300px;
     background-color: white;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
-    margin: 50px;
-    margin-left: auto;
 
 }
+.Calculator h2 {
+    position: absolute;
+    z-index: 1;
+}
 
+.Calculator img {
+    position: relative;
+    height: 301px;
+   width: 100%;
+   border-radius: 10px;
+}
+.Pastel-puzzle:hover{
+    color: rgba(255,255,255,1);
+    box-shadow: 0 5px 15px rgb(192, 51, 51);
+
+}
 .Pastel-puzzle {
     width: 500px;
     height: 300px;
     background-color: white;
     box-shadow: -10px 3px 25px black;
     border-radius: 10px;
-    margin: 50px;
-    margin-left: auto;
-    margin-top: 0;
-   
 
 }
 
+.Pastel-puzzle h2 {
+    position: absolute;
+    z-index: 1;
+}
 
-    .Buddy-run {
+.Pastel-puzzle img {
+    position: relative;
+    height: 301px;
+   width: 100%;
+   border-radius: 10px;
+}
+
+.Buddy-run:hover{
+    color: rgba(255,255,255,1);
+    box-shadow: 0 5px 15px rgb(192, 51, 51);
+}
+.Buddy-run {
         width: 500px;
         height: 300px;
         background-color: white;
         box-shadow: -10px 3px 25px black;
         border-radius: 10px;
-        margin: 50px;
-        margin-left: auto;
+
       
     }
-
+.Buddy-run h2 {
+    position: absolute;
+      
+    z-index: 1;
+}
+.Buddy-run img {
+    position: relative;
+    height: 301px;
+    width: 100%;
+    border-radius: 10px;
+}
 
 /*positiong the 2 extra containers per row next to each other*/
 
 
-.led-calculator{
-    width: 70%;
-    float: left;
-    margin-left: auto;
+.LED-wall,
+.Calculator,
+.Pastel-puzzle,
+.Buddy-run
+{
+    display: inline;
+    float: right;
     justify-content: space-between;
-
-
+    margin: 50px;
+    margin-left: 30px;
 }
 
-.pastel-buddy {
-    width: 70%;
-    float: left;
-    margin-left: auto;
-    justify-content: space-evenly;
-padding-top: 0;
-margin-top: 0;
+
+
+.LED-wall,
+.Pastel-puzzle {
+
+    margin-right: 50px;
 }
+
 
 
 
